# ep-ciencia_dados

./: .gitignore  README.md  app.py  pyproject.toml
src/config/: constants.py
src/dataset_handler/: __init__.py  dataset_handler.py
src/models/: __init__.py  model_runner.py
src/plotter/: __init__.py  plotter.py
src/preprocessing/: __init__.py  pre_process.py
src/utils/: __init__.py  create_directory.py  save_df_to_csv.py
